<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginIconImage"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/appIconDesc"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@+id/loginCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/loginUsernameInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/loginUsernameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_border"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username_hint"
                android:maxLength="50"
                android:inputType="text"
                android:padding="8dp"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/loginPasswordInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

            <EditText
                android:id="@+id/loginPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_border"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:maxLength="50"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/loginLoginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginUsernameInput" />

            <Button
                android:id="@+id/loginLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/login_button_text"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/loginSignUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/loginCredit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCardView"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/loginCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_text"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCardView"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
