<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mainToolBar"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mainProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/ic_launcher_round"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mainProfileNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_text"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/mainProfileImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/mainProfileNameOutput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_hint"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/mainProfileNameText"
                    app:layout_constraintTop_toBottomOf="@+id/mainProfileNameText"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/mainProfileRoleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role_text"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/mainProfileNameOutput"
                    app:layout_constraintTop_toBottomOf="@+id/mainProfileNameOutput"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/mainProfileRoleOutput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/role_hint"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/mainProfileRoleText"
                    app:layout_constraintTop_toBottomOf="@+id/mainProfileRoleText"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainProfileLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mainUpdateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="60dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/update_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mainReadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/read_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/mainUpdateButton"
                app:layout_constraintStart_toStartOf="@+id/mainUpdateButton"
                app:layout_constraintTop_toBottomOf="@+id/mainUpdateButton" />

            <Button
                android:id="@+id/mainTotalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="60dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="Tổng điểm"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/mainReadButton"
                app:layout_constraintStart_toStartOf="@+id/mainReadButton"
                app:layout_constraintTop_toBottomOf="@+id/mainReadButton" />

            <Button
                android:id="@+id/mainSetupButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="28dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/setup_text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/mainTotalButton"
                app:layout_constraintStart_toStartOf="@+id/mainTotalButton"
                app:layout_constraintTop_toBottomOf="@+id/mainTotalButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>