<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/read_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadActivity">

    <Toolbar
        android:id="@+id/readToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageButton
            android:id="@+id/readBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/readTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_text"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/readDatePickerCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <DatePicker
            android:id="@+id/readDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/readFilterDateFromButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Xác nhận"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readDatePickerCardView" />

    <Button
        android:id="@+id/readFilterDateToButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Xác nhận"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readDatePickerCardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/readFilterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/readToolbar"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/readFilterDateFromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="Từ:"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/readFilterDateFromInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/custom_border"
            android:paddingHorizontal="18dp"
            android:paddingVertical="4dp"
            android:text="Ngày"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/readFilterDateFromText"
            app:layout_constraintEnd_toStartOf="@+id/readFilterDateToText"
            app:layout_constraintStart_toEndOf="@+id/readFilterDateFromText"
            app:layout_constraintTop_toTopOf="@+id/readFilterDateFromText" />

        <TextView
            android:id="@+id/readFilterDateToText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đến:"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/readFilterDateFromText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/readFilterDateFromText"
            app:layout_constraintTop_toTopOf="@+id/readFilterDateFromText" />

        <TextView
            android:id="@+id/readFilterDateToInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/custom_border"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="Ngày"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/readFilterDateToText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/readFilterDateToText"
            app:layout_constraintTop_toTopOf="@+id/readFilterDateToText" />

        <TextView
            android:id="@+id/readFilterFaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fault_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/readFilterDateFromText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/readFilterDateFromText"
            app:layout_constraintTop_toBottomOf="@+id/readFilterDateFromText" />

        <Spinner
            android:id="@+id/readFilterFaultSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/custom_border"
            app:layout_constraintBottom_toBottomOf="@+id/readFilterFaultText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/readFilterFaultText"
            app:layout_constraintTop_toTopOf="@+id/readFilterFaultText" />

        <TextView
            android:id="@+id/readFilterRoleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/role_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/readFilterFaultText"
            app:layout_constraintTop_toBottomOf="@+id/readFilterFaultText" />

        <Spinner
            android:id="@+id/readFilterRoleSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/custom_border"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/readFilterRoleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/readFilterRoleText"
            app:layout_constraintTop_toTopOf="@+id/readFilterRoleText" />

        <TextView
            android:id="@+id/readFilterUnitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/unit_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/readFilterRoleText"
            app:layout_constraintTop_toBottomOf="@+id/readFilterRoleText" />

        <Spinner
            android:id="@+id/readFilterUnitSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/custom_border"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/readFilterUnitText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/readFilterUnitText"
            app:layout_constraintTop_toTopOf="@+id/readFilterUnitText" />

        <Button
            android:id="@+id/readFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/read_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/readFilterUnitText"
            app:layout_constraintTop_toBottomOf="@+id/readFilterUnitText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/readRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readFilterLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>